@@ -7,6 +7,8 @@ munin (work)
   * Main: "contacts" can now be set to "none".
   * Main: Bugfix with graphs using both "graph_sums" and data aliases.
   * Main: Tables in service-view now sorted according to graph_order.
+  * Main: Tables in service-view now containt the correct "Type" when using
+    data aliases.
   * Plugins: generic/sendmail_mail{stats,traffic} updated.
   * Plugins: Made generic/samba more portable (fixes by Nicolas Stransky).
   * Plugins: Fixed typo in generic/loggrep breaking implicit labeling.
